[gd_scene load_steps=51 format=3 uid="uid://dsavltsoufo77"]

[ext_resource type="Script" path="res://Scripts/Lab.gd" id="1_2t6wo"]
[ext_resource type="Texture2D" uid="uid://cfmiv5yn5c0bt" path="res://Sprites/Background.png" id="1_3kb5q"]
[ext_resource type="Texture2D" uid="uid://d11total1yswu" path="res://Sprites/Mesa.png" id="2_kqldp"]
[ext_resource type="Texture2D" uid="uid://dpokrkiyy635t" path="res://Sprites/Componentes48x48.png" id="2_o85ks"]
[ext_resource type="PackedScene" uid="uid://c4jyprru63f33" path="res://Scene/Prefabs/button_prefab.tscn" id="3_6lr12"]
[ext_resource type="Texture2D" uid="uid://d2rl2v0foistu" path="res://Sprites/componentes 48x32.png" id="4_er2qv"]
[ext_resource type="Texture2D" uid="uid://c8tk7w7hr2b6x" path="res://Sprites/individuais/bexiga.png" id="5_jin3a"]
[ext_resource type="Texture2D" uid="uid://dgcluw3mi0xry" path="res://Sprites/Moldura.png" id="6_sekne"]
[ext_resource type="Texture2D" uid="uid://ck08lpcd2vua1" path="res://Sprites/letreiro.png" id="8_3aabi"]
[ext_resource type="Texture2D" uid="uid://dkkf14r4l2td2" path="res://Sprites/tubinhosDecorativos.png" id="9_tvsot"]
[ext_resource type="Texture2D" uid="uid://b074wq3gwlpb2" path="res://Sprites/provetaelefante.png" id="11_fjmsj"]
[ext_resource type="Texture2D" uid="uid://cy3o1arbr35nw" path="res://Sprites/fogao.png" id="12_jsxqj"]
[ext_resource type="Texture2D" uid="uid://bht8ksyxu4v2e" path="res://Sprites/garrafaenche.png" id="12_pu055"]
[ext_resource type="Texture2D" uid="uid://boqvc8heo780j" path="res://Sprites/LightEmit.png" id="13_kglvb"]
[ext_resource type="Texture2D" uid="uid://bm3723muelv3u" path="res://Sprites/balaoenche.png" id="13_snds7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mdqtg"]
texture = ExtResource("6_sekne")

[sub_resource type="AtlasTexture" id="AtlasTexture_i0xuq"]
atlas = ExtResource("11_fjmsj")
region = Rect2(0, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgf8a"]
atlas = ExtResource("11_fjmsj")
region = Rect2(67, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1brpf"]
atlas = ExtResource("11_fjmsj")
region = Rect2(134, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oq6f"]
atlas = ExtResource("11_fjmsj")
region = Rect2(201, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2ut5"]
atlas = ExtResource("11_fjmsj")
region = Rect2(268, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_keimv"]
atlas = ExtResource("11_fjmsj")
region = Rect2(335, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll2g2"]
atlas = ExtResource("11_fjmsj")
region = Rect2(402, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhecw"]
atlas = ExtResource("11_fjmsj")
region = Rect2(469, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_conx5"]
atlas = ExtResource("11_fjmsj")
region = Rect2(536, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2rto"]
atlas = ExtResource("11_fjmsj")
region = Rect2(603, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2q62"]
atlas = ExtResource("11_fjmsj")
region = Rect2(670, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3846"]
atlas = ExtResource("11_fjmsj")
region = Rect2(737, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_owief"]
atlas = ExtResource("11_fjmsj")
region = Rect2(804, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kfry"]
atlas = ExtResource("11_fjmsj")
region = Rect2(871, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6juxr"]
atlas = ExtResource("11_fjmsj")
region = Rect2(938, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpqcw"]
atlas = ExtResource("11_fjmsj")
region = Rect2(1005, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yux7"]
atlas = ExtResource("11_fjmsj")
region = Rect2(1072, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqwes"]
atlas = ExtResource("11_fjmsj")
region = Rect2(1139, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lutbq"]
atlas = ExtResource("11_fjmsj")
region = Rect2(1206, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ew7b"]
atlas = ExtResource("11_fjmsj")
region = Rect2(1273, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3ef4"]
atlas = ExtResource("11_fjmsj")
region = Rect2(1340, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u3j2"]
atlas = ExtResource("11_fjmsj")
region = Rect2(1407, 0, 67, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfhjs"]
atlas = ExtResource("12_pu055")
region = Rect2(0, 0, 19, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2ggl"]
atlas = ExtResource("12_pu055")
region = Rect2(19, 0, 19, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_13la5"]
atlas = ExtResource("12_pu055")
region = Rect2(38, 0, 19, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_a0ooy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0xuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgf8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1brpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oq6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2ut5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_keimv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll2g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhecw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_conx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2rto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2q62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3846")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owief")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kfry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6juxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpqcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yux7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqwes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lutbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ew7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3ef4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u3j2")
}],
"loop": false,
"name": &"elephantToothpaste",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfhjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2ggl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13la5")
}],
"loop": false,
"name": &"garrafaPet",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vhi0g"]
atlas = ExtResource("13_snds7")
region = Rect2(0, 0, 48, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsawo"]
atlas = ExtResource("13_snds7")
region = Rect2(48, 0, 48, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qj3u"]
atlas = ExtResource("13_snds7")
region = Rect2(96, 0, 48, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu23m"]
atlas = ExtResource("13_snds7")
region = Rect2(144, 0, 48, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_674ah"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhi0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsawo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qj3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu23m")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_se711"]
atlas = ExtResource("12_jsxqj")
region = Rect2(46, 0, 23, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju5mw"]
atlas = ExtResource("12_jsxqj")
region = Rect2(69, 0, 23, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_snj0f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_se711")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju5mw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Lab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2t6wo")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_3kb5q")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_kqldp")

[node name="sodaCaustica" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(1080, 328)

[node name="ButtonPrefab" parent="sodaCaustica" index="0"]
tooltip_text = "Soda Caústica"
metadata/_edit_use_anchors_ = true

[node name="azulDeMetileno" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(1072, 448)
frame = 1

[node name="ButtonPrefab" parent="azulDeMetileno" index="0"]
tooltip_text = "Azul de Metileno
"
metadata/_edit_use_anchors_ = true

[node name="bicarbonatoDeSodio" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(1120, 448)
frame = 2

[node name="ButtonPrefab" parent="bicarbonatoDeSodio" index="0"]
tooltip_text = "Bicarbonato de Sódio
"
metadata/_edit_use_anchors_ = true

[node name="aguaOxigenada" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(1160, 448)
frame = 3

[node name="ButtonPrefab" parent="aguaOxigenada" index="0"]
tooltip_text = "Água Oxigenada
"
metadata/_edit_use_anchors_ = true

[node name="iodetoDePotassio" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(1200, 448)
frame = 5

[node name="ButtonPrefab" parent="iodetoDePotassio" index="0"]
tooltip_text = "Iodeto De Potassio

"
metadata/_edit_use_anchors_ = true

[node name="vinagre" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(1032, 304)
texture = ExtResource("4_er2qv")
hframes = 3

[node name="ButtonPrefab" parent="vinagre" index="0"]
tooltip_text = "Vinagre

"
metadata/_edit_use_anchors_ = true

[node name="glicose" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(1128, 304)
texture = ExtResource("4_er2qv")
hframes = 3
frame = 2

[node name="ButtonPrefab" parent="glicose" index="0"]
tooltip_text = "Glicose"
metadata/_edit_use_anchors_ = true

[node name="bexiga" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(1184, 320)
scale = Vector2(6.39998, 6.22222)
texture = ExtResource("5_jin3a")
hframes = 1

[node name="ButtonPrefab" parent="bexiga" index="0"]
anchors_preset = -1
anchor_left = -0.152638
anchor_top = -0.0951038
anchor_right = -0.152638
anchor_bottom = -0.0951038
offset_left = -6.23681
offset_top = -10.1441
offset_right = 3.76319
offset_bottom = 5.85593
tooltip_text = "Glicose"
metadata/_edit_use_anchors_ = true

[node name="GarrafaPet" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(912, 480)
texture = ExtResource("4_er2qv")
hframes = 3
frame = 1

[node name="ButtonPrefab" parent="GarrafaPet" index="0"]
anchors_preset = -1
anchor_top = -0.15625
anchor_bottom = 0.25
tooltip_text = "Garrafa de Pet

"
metadata/_edit_use_anchors_ = true

[node name="TuboDeEnsaio" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(856, 456)
texture = ExtResource("2_o85ks")
hframes = 4

[node name="ButtonPrefab" parent="TuboDeEnsaio" index="0"]
anchors_preset = -1
anchor_top = -0.15625
anchor_bottom = 0.25
tooltip_text = "Tubo de Ensaio"
metadata/_edit_use_anchors_ = true

[node name="tubinho" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(808, 456)
texture = ExtResource("2_o85ks")
hframes = 4
frame = 1

[node name="ButtonPrefab" parent="tubinho" index="0"]
anchors_preset = -1
anchor_top = -0.15625
anchor_bottom = 0.25
tooltip_text = "Tubinho
"
metadata/_edit_use_anchors_ = true

[node name="tubinho2" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(760, 456)
texture = ExtResource("2_o85ks")
hframes = 4
frame = 2

[node name="ButtonPrefab" parent="tubinho2" index="0"]
anchors_preset = -1
anchor_top = -0.15625
anchor_bottom = 0.25
tooltip_text = "Tubinho
"
metadata/_edit_use_anchors_ = true

[node name="Erlenmeyer" parent="." instance=ExtResource("3_6lr12")]
position = Vector2(712, 456)
texture = ExtResource("2_o85ks")
hframes = 4
frame = 3

[node name="ButtonPrefab" parent="Erlenmeyer" index="0"]
anchors_preset = -1
anchor_top = -0.15625
anchor_bottom = 0.25
tooltip_text = "Erlenmeyer

"
metadata/_edit_use_anchors_ = true

[node name="letreiro" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -336.0
offset_top = -120.0
offset_right = -88.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_3aabi")

[node name="itemContainer" type="GridContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -104.0
offset_right = -104.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 10
columns = 3

[node name="slot0" type="Panel" parent="itemContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_mdqtg")

[node name="sprite" type="Sprite2D" parent="itemContainer/slot0"]
position = Vector2(32, 32)
scale = Vector2(3, 3)

[node name="slot1" type="Panel" parent="itemContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_mdqtg")

[node name="sprite" type="Sprite2D" parent="itemContainer/slot1"]
position = Vector2(32, 32)
scale = Vector2(3, 3)

[node name="slot2" type="Panel" parent="itemContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_mdqtg")

[node name="sprite" type="Sprite2D" parent="itemContainer/slot2"]
position = Vector2(32, 32)
scale = Vector2(3, 3)

[node name="Tubo de ensaio decorativo" type="Sprite2D" parent="."]
position = Vector2(128, 472)
scale = Vector2(5.05263, 6.38334)
texture = ExtResource("9_tvsot")

[node name="Resultado" type="AnimatedSprite2D" parent="."]
position = Vector2(480, 440)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_a0ooy")
animation = &"elephantToothpaste"

[node name="Bexiga" type="AnimatedSprite2D" parent="Resultado"]
visible = false
position = Vector2(4.33334, -3.33333)
sprite_frames = SubResource("SpriteFrames_674ah")
frame = 3
frame_progress = 1.0

[node name="fire" type="AnimatedSprite2D" parent="."]
position = Vector2(296, 480)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_snj0f")
frame_progress = 0.604922

[node name="PointLight2D" type="PointLight2D" parent="fire"]
position = Vector2(0, 8)
scale = Vector2(0.0182292, 0.0182292)
color = Color(1, 1, 0, 1)
energy = 0.5
texture = ExtResource("13_kglvb")

[editable path="sodaCaustica"]
[editable path="azulDeMetileno"]
[editable path="bicarbonatoDeSodio"]
[editable path="aguaOxigenada"]
[editable path="iodetoDePotassio"]
[editable path="vinagre"]
[editable path="glicose"]
[editable path="bexiga"]
[editable path="GarrafaPet"]
[editable path="TuboDeEnsaio"]
[editable path="tubinho"]
[editable path="tubinho2"]
[editable path="Erlenmeyer"]
